--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,18 +1,23 @@
 {
   "schemaVersion": "1.0.0",
-  "projectStateVersion": 17,
+  "projectStateVersion": 29,
   "summary": "Portfolio website project for Shams Al Qamar Furniture (furniture/interiors business) with multi-page, video-referenced theme, service sections, and contact/location details; content to be sourced from provided social media links.",
   "architectural_notes": [
     "Site should be organized into clear, separate sections/pages per service category (Curtains & Drapes, Wallpaper Solutions, Full Interior, Turnkey Service, etc.).",
     "Include prominent Contact/Location information and links to social platforms; portfolio media to be curated from provided social profiles.",
     "Approved information architecture: organize the site/portfolio by service categories (Option 1: sections by service), including Majlis / Arabic Seating.",
     "Ensure all placeholder/template branding (e.g., “AURUM”) is replaced with Shams Al Qamar-approved branding text such as “SAQ” across header, titles, metadata, and components.",
-    "Improve SAQ branding presentation (logo/wordmark styling) so “SAQ” looks polished and consistent with the site theme."
+    "Improve SAQ branding presentation (logo/wordmark styling) so “SAQ” looks polished and consistent with the site theme.",
+    "Ensure each service section includes a relevant image/media strip (not just Curtains & Drapes) to maintain consistent visual presentation across the Services page.",
+    "Finalize/polish the Majlis / Arabic Seating section (media visibility + visual presentation) as the last major step before considering the portfolio ready for sharing/finalization."
   ],
   "known_issues": [
     "Deployment/build failed during last attempt; site not deployed yet. User requested a fresh build/rebuild (\"start build\").",
     "Build/deploy is currently blocked by a system configuration error (Caffeine platform error) encountered when attempting to rebuild.",
-    "User reports an error in the deployed Draft Version 6 and requests regeneration/rebuild before sharing the direct live portfolio link."
+    "User reports an error in the deployed Draft Version 6 and requests regeneration/rebuild before sharing the direct live portfolio link.",
+    "Majlis / Arabic Seating section visual presentation is not satisfactory (looks “a little ugly”) and needs UI/design refinement.",
+    "Majlis / Arabic Seating section images are not visible (media not rendering) and need to be fixed.",
+    "Majlis / Arabic Seating section images are still not visible even in Draft Version 12; requires further fix before finalizing the portfolio."
   ],
   "isFixRequest": true,
   "existing_features": [
@@ -151,6 +156,86 @@
         "REQ-20"
       ],
       "version": 1
+    },
+    {
+      "id": "feature-ensure-frontend-src-content-gallerymedia-ts-uses-service-category-ids-that-exactly-match-frontend-src-content-services-ts-ids-so-that-each-servicesection-renders-the-correct-images-via-mediastrip-e-g-replace-the-current-category-wallpaper-entries-with-category-wallpaper-solutions-and-verify-all-other-categories-align-to-curtains-drapes-wallpaper-solutions-full-interior-turnkey-service-sofa-upholstery-majlis-seating",
+      "title": "Ensure `frontend/src/content/galleryMedia.ts` uses service category IDs that exactly match `frontend/src/content/services.ts` IDs so that each `ServiceSection` renders the correct images via `MediaStrip` (e.g., replace the current `category: \"wallpaper\"` entries with `category: \"wallpaper-solutions\"`, and verify all other categories align to: `curtains-drapes`, `wallpaper-solutions`, `full-interior`, `turnkey-service`, `sofa-upholstery`, `majlis-seating`).",
+      "reqIds": [
+        "REQ-21"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-populate-the-remaining-service-categories-beyond-curtains-drapes-with-appropriate-image-entries-in-frontend-src-content-gallerymedia-ts-so-that-each-service-section-on-frontend-src-pages-servicespage-tsx-displays-up-to-4-images-in-its-mediastrip-wallpaper-solutions-full-interior-fit-outs-turnkey-service-sofa-upholstery-new-sofa-sets-majlis-arabic-seating-use-existing-static-assets-already-present-in-the-repo-e-g-under-frontend-public-assets-generated-and-do-not-introduce-automated-scraping",
+      "title": "Populate the remaining service categories (beyond `curtains-drapes`) with appropriate image entries in `frontend/src/content/galleryMedia.ts` so that each service section on `frontend/src/pages/ServicesPage.tsx` displays up to 4 images in its `MediaStrip` (Wallpaper Solutions, Full Interior Fit-outs, Turnkey Service, Sofa Upholstery & New Sofa Sets, Majlis / Arabic Seating). Use existing static assets already present in the repo (e.g., under `frontend/public/assets/generated`) and do not introduce automated scraping.",
+      "reqIds": [
+        "REQ-22"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-the-user-uploaded-majlis-images-img-20260205-wa0046-2-jpg-img-20260205-wa0047-2-jpg-img-20260205-wa0048-2-jpg-to-the-frontend-as-static-assets-and-register-them-in-frontend-src-content-gallerymedia-ts-under-the-majlis-seating-category-so-they-appear-in-both-the-services-page-majlis-section-mediastrip-and-the-portfolio-gallery-majlis-tab",
+      "title": "Add the user-uploaded Majlis images (IMG-20260205-WA0046-2.jpg, IMG-20260205-WA0047-2.jpg, IMG-20260205-WA0048-2.jpg) to the frontend as static assets and register them in `frontend/src/content/galleryMedia.ts` under the `majlis-seating` category so they appear in both the Services page Majlis section (MediaStrip) and the Portfolio (/gallery) Majlis tab.",
+      "reqIds": [
+        "REQ-23"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-remove-or-re-categorize-any-existing-gallerymedia-items-currently-assigned-to-majlis-seating-that-are-not-majlis-arabic-seating-images-e-g-sofa-only-or-curtains-images-so-that-majlis-content-is-not-mixed-with-sofa-upholstery-content",
+      "title": "Remove or re-categorize any existing `galleryMedia` items currently assigned to `majlis-seating` that are not Majlis/Arabic seating images (e.g., sofa-only or curtains images), so that Majlis content is not mixed with Sofa Upholstery content.",
+      "reqIds": [
+        "REQ-24"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-improve-the-visual-design-of-the-majlis-arabic-seating-service-section-on-the-services-page-so-it-looks-polished-and-consistent-with-the-rest-of-the-website-theme-without-changing-the-service-category-structure-ids-or-routes-this-should-include-targeted-styling-refinements-for-the-majlis-seating-section-e-g-card-header-background-spacing-typography-treatment-and-if-needed-small-presentation-improvements-to-the-mediastrip-for-that-section-so-the-majlis-images-look-premium-and-well-composed",
+      "title": "Improve the visual design of the “Majlis / Arabic Seating” service section on the Services page so it looks polished and consistent with the rest of the website theme (without changing the service category structure, IDs, or routes). This should include targeted styling refinements for the `majlis-seating` section (e.g., card/header/background/spacing/typography treatment) and, if needed, small presentation improvements to the MediaStrip for that section so the Majlis images look premium and well-composed.",
+      "reqIds": [
+        "REQ-25"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-fix-the-majlis-arabic-seating-media-so-the-three-majlis-images-render-correctly-not-blank-missing-in-both-a-the-services-page-majlis-section-mediastrip-and-b-the-portfolio-page-gallery-majlis-tab-by-ensuring-the-static-image-files-exist-in-the-frontend-public-assets-and-that-frontend-src-content-gallerymedia-ts-path-values-resolve-to-valid-urls-for-these-items-majlis-001-img-20260205-wa0046-2-jpg-majlis-002-img-20260205-wa0047-2-jpg-majlis-003-img-20260205-wa0048-2-jpg",
+      "title": "Fix the Majlis / Arabic Seating media so the three Majlis images render correctly (not blank / missing) in both (a) the Services page Majlis section MediaStrip and (b) the Portfolio page (/gallery) Majlis tab, by ensuring the static image files exist in the frontend public assets and that `frontend/src/content/galleryMedia.ts` `path` values resolve to valid URLs for these items: `majlis-001` (`IMG-20260205-WA0046-2.jpg`), `majlis-002` (`IMG-20260205-WA0047-2.jpg`), `majlis-003` (`IMG-20260205-WA0048-2.jpg`).",
+      "reqIds": [
+        "REQ-27"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-robust-frontend-fallback-ui-for-majlis-and-other-broken-media-so-that-if-an-image-fails-to-load-the-user-sees-a-consistent-placeholder-message-card-rather-than-an-empty-blank-tile-in-the-portfolio-grid-and-the-lightbox-medialightbox",
+      "title": "Add robust frontend fallback UI for Majlis (and other) broken media so that if an image fails to load, the user sees a consistent placeholder message/card rather than an empty/blank tile in the Portfolio grid and the lightbox (MediaLightbox).",
+      "reqIds": [
+        "REQ-28"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-further-refine-the-visual-presentation-of-the-majlis-arabic-seating-service-section-to-match-the-premium-look-of-the-other-sections-keep-the-existing-theme-and-overall-vibe-without-changing-the-service-category-structure-ids-or-routes",
+      "title": "Further refine the visual presentation of the Majlis / Arabic Seating service section to match the premium look of the other sections (keep the existing theme and overall vibe), without changing the service/category structure, IDs, or routes.",
+      "reqIds": [
+        "REQ-29"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-diagnose-and-fix-the-current-build-deployment-failure-including-any-caffeine-ic-deployment-configuration-issues-and-any-project-level-build-errors-so-the-project-builds-and-deploys-successfully-without-runtime-errors-typescript-errors-routing-errors-or-missing-asset-path-errors",
+      "title": "Diagnose and fix the current build/deployment failure (including any Caffeine/IC deployment configuration issues and any project-level build errors) so the project builds and deploys successfully without runtime errors, TypeScript errors, routing errors, or missing asset-path errors.",
+      "reqIds": [
+        "REQ-30"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-after-a-successful-deployment-provide-the-live-website-url-and-the-direct-portfolio-link-the-live-url-plus-gallery-as-the-shareable-portfolio-link",
+      "title": "After a successful deployment, provide the live website URL and the direct Portfolio link (the live URL plus `/gallery`) as the shareable portfolio link.",
+      "reqIds": [
+        "REQ-31"
+      ],
+      "version": 1
     }
   ],
   "new_feature_requests": [
@@ -235,6 +320,32 @@
       "summary": "Publish/deploy the current portfolio website build and provide the live website URL in chat.",
       "reqIds": [
         "REQ-17"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-17",
+      "summary": "Populate other service sections (beyond Curtains & Drapes) with appropriate images similar to the Custom Curtains & Drapes section to improve visual completeness",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-18",
+      "summary": "Fix Majlis section media: remove/switch incorrectly placed sofa images and add the correct user-mentioned Majlis images so Majlis / Arabic Seating displays appropriate photos",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-19",
+      "summary": "Improve the visual design/presentation of the Majlis / Arabic Seating section (currently looks “a little ugly”) and then share the direct live portfolio website link in chat",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-20",
+      "summary": "Fix the Majlis / Arabic Seating images so they render correctly in both (a) the Services page Majlis section MediaStrip and (b) the Portfolio (/gallery) Majlis tab by ensuring the three Majlis image files exist as static public assets and their `galleryMedia.ts` `path` values resolve to valid URLs.",
+      "reqIds": [
+        "REQ-26"
       ],
       "status": "pending"
     }
