--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,31 +1,31 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
+  "summary": "Project involves a furniture-themed experience with a dark wooden look; user wants a more engaging background that matches furniture content and has a futuristic aesthetic.",
   "architectural_notes": [],
   "known_issues": [],
   "isFixRequest": false,
-  "imageRequirements": "## Required Images\n- Parquet flooring in a bright modern interior photo (parquet-flooring-001.dim_1600x1200.jpg)",
+  "imageRequirements": "## Edit Images\n- Make the existing dark wood background feel more futuristic and engaging while remaining furniture/interior themed; add subtle modern geometric/tech accents and lighting while keeping it dark and premium (wood-dark-bg.dim_1920x1080.png > wood-futuristic-bg.dim_1920x1080.png)",
   "existing_features": [
     {
-      "id": "feature-create-a-new-generated-static-image-asset-for-the-parquet-flooring-service-and-place-it-under-frontend-public-assets-generated-with-the-exact-filename-specified-in-the-image-requirements",
-      "title": "Create a new generated static image asset for the Parquet Flooring service and place it under frontend/public/assets/generated with the exact filename specified in the image requirements.",
+      "id": "feature-update-the-global-site-background-to-feel-more-engaging-and-futuristic-while-still-matching-the-furniture-interior-theme-improve-on-the-current-dull-dark-wood-look-and-keep-all-page-content-readable",
+      "title": "Update the global site background to feel more engaging and futuristic while still matching the furniture/interior theme (improve on the current dull dark-wood look) and keep all page content readable.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-add-a-new-gallery-media-item-for-the-parquet-flooring-category-so-it-can-be-rendered-by-the-existing-mediastrip-component",
-      "title": "Add a new gallery media item for the Parquet Flooring category so it can be rendered by the existing MediaStrip component.",
+      "id": "feature-wire-the-updated-background-asset-into-the-global-layout-by-updating-sitelayout-and-global-css-so-the-new-futuristic-background-image-is-used-instead-of-the-current-wood-dark-bg-image",
+      "title": "Wire the updated background asset into the global layout by updating SiteLayout and global CSS so the new futuristic background image is used instead of the current wood-dark-bg image.",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-enable-media-rendering-for-the-parquet-flooring-entry-in-the-services-page-additional-offerings-section-by-wiring-it-to-the-parquet-flooring-media-category",
-      "title": "Enable media rendering for the Parquet Flooring entry in the Services page \"Additional Offerings\" section by wiring it to the Parquet Flooring media category.",
+      "id": "feature-align-the-home-page-hero-background-treatment-with-the-new-global-futuristic-furniture-aesthetic-so-the-hero-section-does-not-feel-visually-disconnected-from-the-updated-site-wide-background",
+      "title": "Align the Home page hero background treatment with the new global futuristic furniture aesthetic so the hero section does not feel visually disconnected from the updated site-wide background.",
       "reqIds": [
         "REQ-3"
       ],
@@ -35,12 +35,12 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Apply the same recently added functionality/changes to the parquet flooring service (as was done for the vertical blinds service).",
+      "summary": "Revise background to be more engaging, aligned with furniture content, and have a futuristic look (improve on current dull background/dark wooden look).",
       "reqIds": [],
       "status": "pending"
     }
   ],
-  "projectName": "Apply Vertical Blinds gallery/media setup to Parquet Flooring service",
+  "projectName": "Replace dull dark-wood background with an engaging futuristic furniture-themed backdrop",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
